Trabaje en FRAME

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,13 +36,15 @@ dist.jlink.output=${dist.jlink.dir}/Licencia
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\josep\\Desktop\\Otros\\mysql-connector-j-8.0.31.jar
+file.reference.mysql-connector-j-8.0.31.jar-1=C:\\Users\\joans\\OneDrive\\Documentos\\NetBeansProjects\\mysql-connector-j-8.0.31.jar
 file.reference.mysql-connector-j-8.0.31.jar-2=C:\\Users\\Francisco\\Documents\\ITI_3_Cuatrimestre_2022\\Progra2\\semana_10\\mysql-connector-j-8.0.31.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-j-8.0.31.jar-2}:\
-    ${file.reference.mysql-connector-j-8.0.31.jar}
+    ${file.reference.mysql-connector-j-8.0.31.jar}:\
+    ${file.reference.mysql-connector-j-8.0.31.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
